--- a/views/repoSelect.ejs
+++ b/views/repoSelect.ejs
@@ -47,6 +47,8 @@
                 <p>
                   <a href="" id="repoUrl" target="_blank">View Repository</a>
                 </p>
+                <p>Timezone: <% tz %><br/><sub>This is important as it is what is used to determine your streaks.</sub></p>
+                
               </div>
             </div>
             <input type="hidden" name="repoData" id="repoData" />
