--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title><%= title %></title>
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+<div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-body p-5">
+                <h2 class="fw-bold mb-0">What's new</h2>
 
-<!-- Your content here -->
-<h1><%= message %></h1>
-<!-- JS, Popper.js, and jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+                <ul class="d-grid gap-4 my-5 list-unstyled small">
+                    <li class="d-flex gap-4">
+                        <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48">
+                            <use xlink:href="#grid-fill"></use>
+                        </svg>
+                        <div>
+                            <h5 class="mb-0">Grid view</h5>
+                            Not into lists? Try the new grid view.
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <svg class="bi text-warning flex-shrink-0" width="48" height="48">
+                            <use xlink:href="#bookmark-star"></use>
+                        </svg>
+                        <div>
+                            <h5 class="mb-0">Bookmarks</h5>
+                            Save items you love for easy access later.
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <svg class="bi text-primary flex-shrink-0" width="48" height="48">
+                            <use xlink:href="#film"></use>
+                        </svg>
+                        <div>
+                            <h5 class="mb-0">Video embeds</h5>
+                            Share videos wherever you go.
+                        </div>
+                    </li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great,
+                    thanks!</button>
+            </div>
+        </div>
+    </div>
+</div>
