--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -9,6 +9,7 @@
     const socket = io.connect();
 
     socket.on('realtime', function (data) {
+        console.log('data gotten', data)
         const list = document.getElementById('eventsList');
         const listItem = document.createElement('li');
         listItem.textContent = data.message;
