--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,7 +32,7 @@
                     </ul>
 
                     <div class="col-md-3 text-end">
-                        <button type="button" class="btn btn-outline-warning me-2">Revoke</button>
+                        <!-- <button type="button" class="btn btn-outline-warning me-2">Revoke</button> -->
                         <button type="button" class="btn btn-success">Setup</button>
                     </div>
                 </header>
