--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -11,8 +11,24 @@
     socket.on('/realtime', function (data) {
         console.log('data gotten', data)
         const list = document.getElementById('eventsList');
+
+        // Create a new list item
         const listItem = document.createElement('li');
-        listItem.textContent = data.message;
+
+        // If there's a message, set the text content
+        if (data.message) {
+            listItem.textContent = data.message;
+        }
+
+        // If there's an image URL, create an img element and set the src
+        if (data.imageUrl) {
+            const imageElem = document.createElement('img');
+            imageElem.src = data.imageUrl;
+            imageElem.alt = "Received image"; // you can change this to something more descriptive if needed
+            imageElem.className = "discord-avatar"
+            listItem.appendChild(imageElem);
+        }
+
         list.appendChild(listItem);
     });
 </script>
