--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -21,7 +21,7 @@
         }
 
         // If there's an image URL, create an img element and set the src
-        if (data.imageUrl) {
+        if (data.discordAvatar) {
             const imageElem = document.createElement('img');
             imageElem.src = data.imageUrl;
             imageElem.alt = "Received image"; // you can change this to something more descriptive if needed
