update some links on homepage

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,14 +27,15 @@
                     </div>
 
                     <ul class="nav col-12 col-md-auto mb-2 justify-content-left mb-md-0">
-                        <li><a href="#" class="nav-link px-2">Home</a></li>
+                        <li><a href="/" class="nav-link px-2">Home</a></li>
                         <li><a href="#" class="nav-link px-2">Leaderboard</a></li>
-                        <li><a href="#" class="nav-link px-2">About</a></li>
+                        <li><a href="/realtime" class="nav-link px-2">Realtime Events</a></li>
                     </ul>
 
                     <div class="col-md-3 text-end">
                         <!-- <button type="button" class="btn btn-outline-warning me-2">Revoke</button> -->
-                        <button type="button" class="btn btn-success">Setup</button>
+                        <button type="button" onclick="document.location.href='/auth/discord'"
+                            class="btn btn-success">Setup</button>
                     </div>
                 </header>
             </div>
