--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="../functions/github.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 </head>
 
@@ -28,7 +29,7 @@
 
                     <ul class="nav col-12 col-md-auto mb-2 justify-content-left mb-md-0">
                         <li><a href="/" class="nav-link px-2">Home</a></li>
-                        <li><a href="#" class="nav-link px-2">Leaderboard</a></li>
+                        <li><a href="#" class="nav-link px-2 disabled">Leaderboard</a></li>
                         <li><a href="/realtime" class="nav-link px-2">Realtime Events</a></li>
                     </ul>
 
@@ -56,6 +57,9 @@
             </div>
         </footer>
     </div>
+    <script>
+        console.log(CalculateCurrentStreak())
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
