--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,113 @@
 <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-body p-5">
-                <h2 class="fw-bold mb-0">What's new</h2>
+                <h2 class="fw-bold mb-0">What works</h2>
 
                 <ul class="d-grid gap-4 my-5 list-unstyled small">
                     <li class="d-flex gap-4">
-                        <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48">
-                            <use xlink:href="#grid-fill"></use>
-                        </svg>
                         <div>
-                            <h5 class="mb-0">Grid view</h5>
-                            Not into lists? Try the new grid view.
+                            <h5 class="mb-0">Auth and Tracking</h5>
+                            Auth against Discord & GitHub to prove ownership. Select which repo you'd like to track.
+                            (Currently cannot change)<br /><sub>Hit setup in the top right.</sub>
                         </div>
                     </li>
                     <li class="d-flex gap-4">
-                        <svg class="bi text-warning flex-shrink-0" width="48" height="48">
-                            <use xlink:href="#bookmark-star"></use>
-                        </svg>
                         <div>
-                            <h5 class="mb-0">Bookmarks</h5>
-                            Save items you love for easy access later.
+                            <h5 class="mb-0">Streaks</h5>
+                            You'll have your streak increased and it will require at least 1 push daily from your
+                            timezone (12am it will expire if no push)<br\>As well as current streak being recorded, best
+                                streak is also recorded as a personal best to beat.
                         </div>
                     </li>
                     <li class="d-flex gap-4">
-                        <svg class="bi text-primary flex-shrink-0" width="48" height="48">
-                            <use xlink:href="#film"></use>
-                        </svg>
                         <div>
-                            <h5 class="mb-0">Video embeds</h5>
-                            Share videos wherever you go.
+                            <h5 class="mb-0">Realtime events</h5>
+                            You can see the latest 50 events, including when they come in, in realtime. (not styled at
+                            all, unlucky)
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Discord webhook ready</h5>
+                            I log errors and certain actions in a <strong>secret</strong> server just for me.<br />But I
+                            can also log whatever I want to any other webhooks.
+                            <span>This will enable;</span>
+                            <ul>
+                                <li> leaderboard feature.</li>
+                                <li> milestone events being announced (e.g. week streak, month streak etc).</li>
+                                <li> streak ending warnings.</li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great,
-                    thanks!</button>
+
+                <div class="border-top my-4"></div>
+
+                <h2 class="fw-bold mb-0">What is janky</h2>
+                <ul class="d-grid gap-4 my-5 list-unstyled small">
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Literally everything</h5>
+                            Ill clean up routes and error handling as I go. I dont want to really spend any time styling
+                            at the moment either as I may swap to tailwind.
+                        </div>
+                    </li>
+                </ul>
+
+                <div class="border-top my-4"></div>
+
+                <h2 class="fw-bold mb-0">Todo</h2>
+                <ul class="d-grid gap-4 my-5 list-unstyled small">
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Clean up routing</h5>
+                            This one speaks for itself...
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Styling</h5>
+                            This looks pretty damn fine...5 years ago
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Suggestion page</h5>
+                            Yet another feature that the discord webhooks enable for me to implement easily.
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Revoke</h5>
+                            Add the ability to remove yourself from tracking. Right now I leave to auth to read
+                            repo_scope on github too... I dont need it after I add it so I can remove it.
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Swap repo being tracked</h5>
+                            Not sure how I want to do this. Keep streak or to not keep streak? Maybe I can just track as
+                            many repo's as the user likes. The streak counting is centralised and doesnt care where the
+                            event comes from anyway..
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Leaderboard</h5>
+                            Leaderboard interaction in discord. Might also make into a UI to allow for pagination
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Continious streaks</h5>
+                            This one is probably possible but the results are paginated so I wasnt enjoying it...<br\>
+                                Basically if you initiate the setup and have a repo that you have already been pushing
+                                to for a while, I want to start the streak from where you already are instead of
+                                starting from day 1
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
