--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-body p-5">
-                <h2 class="fw-bold mb-0">What works - adding this to test</h2>
+                <h2 class="fw-bold mb-0">What works</h2>
 
                 <ul class="d-grid gap-4 my-5 list-unstyled small">
                     <li class="d-flex gap-4">
