--- a/views/repoSelect.ejs
+++ b/views/repoSelect.ejs
@@ -48,9 +48,9 @@
     const description = selectedOption.getAttribute("data-description");
     const url = selectedOption.getAttribute("data-url");
 
-    if (description == null || description == "") {
-      description = "-"
-    }
+    // if (description == null || description == "") {
+    //   description = "-"
+    // }
 
     // Update the display area with the selected repository's details
     document.getElementById("description").textContent = description;
