--- a/views/authFinal.ejs
+++ b/views/authFinal.ejs
@@ -7,9 +7,18 @@
                     <li class="d-flex gap-4">
                         <div>
                             <h5 class="mb-0">Info</h5>
-                            <span>Github Username: <%= user.githubName %></span>
-                            <span>Tracking: <%= user.repoName %></span>
-                            <span>Timezone: <%= user.timezone %></span>
+                            <div>
+                                <strong>Github Username:</strong>
+                                <%= user.githubName %>
+                            </div>
+                            <div>
+                                <strong>Tracking:</strong>
+                                <%= user.repoName %>
+                            </div>
+                            <div>
+                                <strong>Timezone:</strong>
+                                <%= user.timezone %>
+                            </div>
                         </div>
                     </li>
                     <li class="d-flex gap-4">
