--- a/views/authFinal.ejs
+++ b/views/authFinal.ejs
@@ -6,7 +6,6 @@
                 <ul class="d-grid gap-4 my-5 list-unstyled small">
                     <li class="d-flex gap-4">
                         <div>
-                            <h5 class="mb-0">Info</h5>
                             <div>
                                 <strong>Github Username:</strong>
                                 <%= user.githubName %>
@@ -20,6 +19,9 @@
                                 <%= user.timezone %>
                             </div>
                         </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div class="border-top my-4"></div>
                     </li>
                     <li class="d-flex gap-4">
                         <div>
