formatting and hide setup button if in auth

--- a/views/authFinal.ejs
+++ b/views/authFinal.ejs
@@ -20,9 +20,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="d-flex gap-4">
-                        <div class="border-top my-4"></div>
-                    </li>
+                    <li class="d-flex gap-4 border-top my-4"></li>
                     <li class="d-flex gap-4">
                         <div>
                             <h5 class="mb-0">Your streak starts when you do!</h5>
