--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,8 +34,10 @@
 
                     <div class="col-md-3 text-end">
                         <!-- <button type="button" class="btn btn-outline-warning me-2">Revoke</button> -->
-                        <button type="button" onclick="document.location.href='/auth/discord'"
-                            class="btn btn-success">Setup</button>
+                        <% if ((!currentRoute.includes('/auth')) { %>
+                            <button type="button" onclick="document.location.href='/auth/discord'"
+                                class="btn btn-success">Setup</button>
+                            <% } %>
                     </div>
                 </header>
             </div>
