--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,10 @@
                     <li class="d-flex gap-4">
                         <div>
                             <h5 class="mb-0">Suggestion page</h5>
-                            Yet another feature that the discord webhooks enable for me to implement easily.
+                            Yet another feature that the discord webhooks enable for me to implement easily.<br\>
+                                I would however like to have a page that shows suggestions and allows upvotes so that I
+                                can direct my efforts. This is doable at the moment but I dont want to spend time on
+                                that when I am using SSR (means i'd have to refresh the entire page to show an update)
                         </div>
                     </li>
                     <li class="d-flex gap-4">
