--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
     <title>
         <%= title %>
     </title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
@@ -28,7 +29,7 @@
 
                     <ul class="nav col-12 col-md-auto mb-2 justify-content-left mb-md-0">
                         <li><a href="/" class="nav-link px-2">Home</a></li>
-                        <li><a href="#" class="nav-link px-2 disabled">Leaderboard</a></li>
+                        <li><a href="/leaderboard" class="nav-link px-2">Leaderboard</a></li>
                         <li><a href="/realtime" class="nav-link px-2">Realtime Events</a></li>
                     </ul>
 
