--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -6,31 +6,28 @@
         <!-- The list where the events will appear -->
         <ul class="list-group list-group-flush">
             <% data.forEach(event=> { %>
-                <li class="list-group-item" data-timestamp="<%= event.ts %>">
-                    <div class="row">
-
-                        <div class="col-3 hstack gap-3 align-items-center justify-content-center">
-                            <img style="max-height:40px;" src="<%= event.discordAvatar %>" alt="<%= event.username %>"
-                                class="discord-avatar rounded-circle">
-                            <strong>
-                                <%= event.username %>
-                            </strong>
-                        </div>
-                        <div class="vr"></div>
-                        <div class="col-3 hstack gap-2 align-items-center justify-content-center">
-                            <strong>Current Streak: </strong>
-                            <span>&#128293;</span>
-                            <%= event.currentStreak %>
-                        </div>
-                        <div class="vr"></div>
-                        <div class="col-3 hstack gap-2 align-items-center justify-content-center">
-                            <strong>Total Pushes: </strong>
-                            <i class="bi bi-github"></i>
-                            <%= event.totalPushes %>
-                        </div>
-                        <div class="col-3 hstack gap-2 align-items-center justify-content-center">
-                            <span class="badge text-bg-secondary timeSince">a moment ago</span>
-                        </div>
+                <li class="list-group-item d-flex justify-content-evenly" data-timestamp="<%= event.ts %>">
+                    <div class="w-25 hstack gap-3 align-items-center justify-content-center">
+                        <img style="max-height:40px;" src="<%= event.discordAvatar %>" alt="<%= event.username %>"
+                            class="discord-avatar rounded-circle">
+                        <strong>
+                            <%= event.username %>
+                        </strong>
+                    </div>
+                    <div class="vr"></div>
+                    <div class="w-25 hstack gap-2 align-items-center justify-content-center">
+                        <strong>Current Streak: </strong>
+                        <span>&#128293;</span>
+                        <%= event.currentStreak %>
+                    </div>
+                    <div class="vr"></div>
+                    <div class="w-25 hstack gap-2 align-items-center justify-content-center">
+                        <strong>Total Pushes: </strong>
+                        <i class="bi bi-github"></i>
+                        <%= event.totalPushes %>
+                    </div>
+                    <div class="w-25 hstack gap-2 align-items-center justify-content-center">
+                        <span class="badge text-bg-secondary timeSince">a moment ago</span>
                     </div>
                 </li>
                 <% }); %>
