--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -22,7 +22,7 @@
                     </div>
                     <div class="vr"></div>
                     <div class="w-25 hstack gap-2 align-items-center justify-content-center">
-                        <strong>Total Pushes: </strong>
+                        <strong>Push #: </strong>
                         <i class="bi bi-github"></i>
                         <%= event.totalPushes %>
                     </div>
