--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 </head>
 
-<body>
+<body class="font-monospace">
     <div class="d-flex flex-column min-vh-100">
         <div class="bg-dark bg-gradient">
             <div class="container">
