--- a/views/repoSelect.ejs
+++ b/views/repoSelect.ejs
@@ -4,6 +4,13 @@
       <h2>Select a Repository to Track!</h2>
     </div>
     <div class="row pb-3 align-items-center">
+      <div class="alert alert-primary d-flex align-items-center" role="alert">
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          This will add a webhook to the selected repo that will alert us
+          when a repo changes.
+        </div>
+      </div>
       <div class="alert alert-warning">
         <p>
           This will add a webhook to the selected repo that will alert us
