--- a/views/repoSelect.ejs
+++ b/views/repoSelect.ejs
@@ -1,11 +1,9 @@
 <div class="min-vh-100 d-flex justify-content-center align-items-center">
   <div class="m-3 border rounded p-5 bg-dark-subtle">
-    <div class="w-25 hstack gap-3 align-items-center justify-content-center">
-      <div class="row pb-3 align-items-center">
-        <h2>Select a Repository to Track!</h2>
-      </div>
+    <div class="vstack gap-5 align-items-start justify-content-center">
+      <h2>Select a Repository to Track!</h2>
 
-      <div class="alert alert-warning d-flex align-items-center" role="alert">
+      <div class="alert m-0 alert-warning d-flex align-items-center" role="alert">
         <i class="bi bi-exclamation-triangle fs-2 me-2"></i>
         <div>
           This will add a webhook to the selected repo that will alert us
@@ -13,18 +11,20 @@
         </div>
       </div>
 
-      <form action="/auth/github-submit-repo" method="post" class="p-0">
-        <div class="form-group my-3">
-          <label for="repoDropdown" class="form-label">Select your repository</label>
-          <select class="form-select" id="repoDropdown" name="repoName">
-            <% repoList.forEach((repo)=> { %>
-              <option value="<%= repo.name %>" data-description="<%= repo.description %>"
-                data-url="<%= repo.html_url %>">
-                <%= repo.name %>
-              </option>
-              <% }); %>
-          </select>
-          <div class="py-4" id="repoDetails">
+      <form action="/auth/github-submit-repo" method="post" class="p-0 w-100">
+        <div class="form-group vstack gap-4 align-items-start justify-content-center">
+          <div>
+            <label for="repoDropdown" class="form-label">Select your repository</label>
+            <select class="form-select" id="repoDropdown" name="repoName">
+              <% repoList.forEach((repo)=> { %>
+                <option value="<%= repo.name %>" data-description="<%= repo.description %>"
+                  data-url="<%= repo.html_url %>">
+                  <%= repo.name %>
+                </option>
+                <% }); %>
+            </select>
+          </div>
+          <div class="" id="repoDetails">
             <p>
               <strong>Description:</strong> <span id="description"></span>
             </p>
