--- a/views/authFinal.ejs
+++ b/views/authFinal.ejs
@@ -1,35 +1,33 @@
-<div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
-    <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content rounded-4 shadow">
-            <div class="modal-body p-5">
-                <h2 class="fw-bold mb-0">Welcome <%= user.discordUsername %>, goodluck!</h2>
-                <ul class="d-grid gap-4 my-5 list-unstyled small">
-                    <li class="d-flex gap-4">
+<div class="min-vh-100 d-flex justify-content-center align-items-center">
+    <div class="m-3 p-5 bg-dark-subtle">
+        <div class="vstack gap-5 align-items-start justify-content-center">
+            <h2 class="fw-bold mb-0">Welcome <%= user.discordUsername %>, goodluck!</h2>
+            <ul class="d-grid gap-4 my-5 list-unstyled small">
+                <li class="d-flex gap-4">
+                    <div>
                         <div>
-                            <div>
-                                <strong>Github Username:</strong>
-                                <%= user.githubName %>
-                            </div>
-                            <div>
-                                <strong>Tracking:</strong>
-                                <%= user.repoName %>
-                            </div>
-                            <div>
-                                <strong>Timezone:</strong>
-                                <%= user.timezone %>
-                            </div>
+                            <strong>Github Username:</strong>
+                            <%= user.githubName %>
                         </div>
-                    </li>
-                    <li class="d-flex gap-4 border-top my-4"></li>
-                    <li class="d-flex gap-4">
                         <div>
-                            <h5 class="mb-0">Your streak starts when you do!</h5>
-                            Once you make your first push to GitHub, your streak will start and you will have until 12am
-                            the following day to keep it going.
+                            <strong>Tracking:</strong>
+                            <%= user.repoName %>
                         </div>
-                    </li>
-                </ul>
-            </div>
+                        <div>
+                            <strong>Timezone:</strong>
+                            <%= user.timezone %>
+                        </div>
+                    </div>
+                </li>
+                <li class="d-flex gap-4 border-top my-4"></li>
+                <li class="d-flex gap-4">
+                    <div>
+                        <h5 class="mb-0">Your streak starts when you do!</h5>
+                        Once you make your first push to GitHub, your streak will start and you will have until 12am
+                        the following day to keep it going.
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
