--- a/views/authFinal.ejs
+++ b/views/authFinal.ejs
@@ -1,8 +1,8 @@
-<div class="min-vh-100 d-flex justify-content-center align-items-center">
+<div class="d-flex justify-content-center align-items-center w-100">
     <div class="m-3 p-5 bg-dark-subtle">
-        <div class="vstack gap-5 align-items-start justify-content-center">
+        <div class="vstack gap-2 align-items-start justify-content-center">
             <h2 class="fw-bold mb-0">Welcome <%= user.discordUsername %>, goodluck!</h2>
-            <ul class="d-grid gap-4 my-5 list-unstyled small">
+            <ul class="d-grid gap-1 my-2 list-unstyled small">
                 <li class="d-flex gap-4">
                     <div>
                         <div>
