--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,7 +45,7 @@
         </div>
 
 
-        <main class="flex-fill">
+        <main class="d-flex flex-fill">
             <%- body %>
         </main>
 
