--- a/views/repoSelect.ejs
+++ b/views/repoSelect.ejs
@@ -1,4 +1,4 @@
-<div class="min-vh-100 d-flex justify-content-center align-items-center">
+<div class="d-flex justify-content-center align-items-center w-100">
   <div class="m-3 p-5 bg-dark-subtle">
     <div class="vstack gap-5 align-items-start justify-content-center">
       <h2>Select a Repository to Track!</h2>
