--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -1,5 +1,5 @@
-<div class="min-vh-100 d-flex justify-content-center align-items-start">
-    <div class="m-3 border rounded p-5 bg-dark-subtle w-100">
+<div class="d-flex justify-content-center align-items-start w-100">
+    <div class="m-3 p-5 bg-dark-subtle w-100">
         <div class="row pb-3 align-items-center">
             <h2>Realtime Events</h2>
         </div>
