fix realtime formatting

--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -27,7 +27,6 @@
                         <%= event.totalPushes %>
                     </div>
                     <div class="w-25 hstack gap-2 align-items-center justify-content-center">
-                        <!-- <span class="badge text-bg-secondary timeSince">a moment ago</span> -->
                         <p class="timeSince mb-0">a moment ago</p>
                     </div>
                 </li>
@@ -50,20 +49,18 @@
                 <img style="max-height:40px;" src="${data.discordAvatar}" alt="${data.username}" class="discord-avatar rounded-circle">
                 <strong>${data.username}</strong>
             </div>
-            <div class="vr"></div>
             <div class="w-25 hstack gap-2 align-items-center justify-content-center">
                 <strong>Current Streak: </strong>
                 <span>&#128293;</span>
                 ${data.currentStreak}
             </div>
-            <div class="vr"></div>
             <div class="w-25 hstack gap-2 align-items-center justify-content-center">
                 <strong>Push #: </strong>
                 <i class="bi bi-github"></i>
                 ${data.totalPushes}
             </div>
             <div class="w-25 hstack gap-2 align-items-center justify-content-center">
-                <span class="badge text-bg-secondary timeSince">a moment ago</span>
+                <p class="timeSince mb-0">a moment ago</p>
             </div>
         </li>
     `;
